parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> PROGRAM_VARS PROGRAM_FUNCTIONS main : BLOCK
Rule 2     ACCESS_COL -> id . row ( EXP )
Rule 3     ACCESS_ROW -> id . col ( EXP )
Rule 4     ASSIGNMENT -> id = EXP ;
Rule 5     BIND_COLS -> cbind ( id , ACCESS_COL ) ;
Rule 6     BIND_ROWS -> rbind ( id , ACCESS_ROW ) ;
Rule 7     BINDINGS -> BIND_ROWS
Rule 8     BINDINGS -> BIND_COLS
Rule 9     BLOCK -> { BLOCK_INST BLOCK_STM }
Rule 10    BLOCK -> { BLOCK_INST BLOCK_STM return EXP }
Rule 11    BLOCK_INST -> INSTANTIATE BLOCK_INST
Rule 12    BLOCK_INST -> <empty>
Rule 13    BLOCK_STM -> STATEMENT BLOCK_STM
Rule 14    BLOCK_STM -> <empty>
Rule 15    CALLFUNC -> id ( CALLFUNC_PARAMS ) ;
Rule 16    CALLFUNC_PARAMS -> EXP
Rule 17    CALLFUNC_PARAMS -> EXP ,
Rule 18    CALLFUNC_PARAMS -> <empty>
Rule 19    CONDITION -> if ( SUPER_EXPRESSION ) BLOCK
Rule 20    CONDITION -> if ( SUPER_EXPRESSION ) BLOCK else BLOCK
Rule 21    CORR_HEADERS -> correlateHeaders ( TABLE_HEADER , TABLE_HEADER , VAR_CTE ) ;
Rule 22    CORR -> correlate ( id , id , VAR_CTE ) ;
Rule 23    CORRELATION -> CORR_HEADERS
Rule 24    CORRELATION -> CORR
Rule 25    CREATE_DF -> dataframe ( id , [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
Rule 26    CREATE_DF -> dataframe ( id , FILE_INPUT ) ;
Rule 27    CREATE_DF_TAGS -> cte_string ,
Rule 28    CREATE_DF_TAGS -> cte_string
Rule 29    EXP -> TERM
Rule 30    EXP -> TERM + EXP
Rule 31    EXP -> TERM - EXP
Rule 32    EXPRESSION -> EXP
Rule 33    EXPRESSION -> EXP EXPRESSION_SYM EXP
Rule 34    EXPRESSION_SYM -> <
Rule 35    EXPRESSION_SYM -> >
Rule 36    EXPRESSION_SYM -> relop_lsequal
Rule 37    EXPRESSION_SYM -> relop_grequal
Rule 38    EXPRESSION_SYM -> relop_equals
Rule 39    EXPRESSION_SYM -> relop_notequal
Rule 40    FACTOR -> ( EXPRESSION )
Rule 41    FACTOR -> + VAR_CTE
Rule 42    FACTOR -> - VAR_CTE
Rule 43    FACTOR -> VAR_CTE
Rule 44    FILE_INPUT -> cte_string . csv
Rule 45    FUNCTION -> void func id ( PARAMETERS ) : BLOCK
Rule 46    FUNCTION -> TYPE func id ( PARAMETERS ) : BLOCK
Rule 47    INSTANTIATE -> CREATE_DF
Rule 48    INSTANTIATE -> VARS
Rule 49    LOOP -> while ( SUPER_EXPRESSION ) BLOCK
Rule 50    OPERATION -> BINDINGS
Rule 51    OPERATION -> CORRELATION
Rule 52    OPERATION -> CALLFUNC
Rule 53    PARAMETERS -> TYPE id , PARAMETERS
Rule 54    PARAMETERS -> TYPE id
Rule 55    PRINT_CELL -> printCell id [ EXP , EXP ] ;
Rule 56    PRINT_COL -> printCol TABLE_HEADER ;
Rule 57    PRINT_COL -> printCol ACCESS_COL ;
Rule 58    PRINT_DATA -> printData id ;
Rule 59    PRINT_HEADERS -> printHeaders id ;
Rule 60    PRINT_ROW -> printRow id ACCESS_ROW ;
Rule 61    PRINT_TAGS -> printTags id ;
Rule 62    PRINT -> PRINT_COL
Rule 63    PRINT -> PRINT_TAGS
Rule 64    PRINT -> PRINT_DATA
Rule 65    PRINT -> PRINT_HEADERS
Rule 66    PRINT -> PRINT_CELL
Rule 67    PRINT -> PRINT_ROW
Rule 68    PROGRAM_VARS -> INSTANTIATE PROGRAM_VARS
Rule 69    PROGRAM_VARS -> <empty>
Rule 70    PROGRAM_FUNCTIONS -> FUNCTION PROGRAM_FUNCTIONS
Rule 71    PROGRAM_FUNCTIONS -> <empty>
Rule 72    STATEMENT -> ASSIGNMENT
Rule 73    STATEMENT -> CONDITION
Rule 74    STATEMENT -> OPERATION
Rule 75    STATEMENT -> PRINT
Rule 76    STATEMENT -> LOOP
Rule 77    STATEMENT -> CALLFUNC
Rule 78    SUPER_EXPRESSION -> EXPRESSION
Rule 79    SUPER_EXPRESSION -> EXPRESSION relop_and EXPRESSION
Rule 80    SUPER_EXPRESSION -> EXPRESSION relop_or EXPRESSION
Rule 81    TABLE_HEADER -> id $ id
Rule 82    TERM -> FACTOR
Rule 83    TERM -> FACTOR * TERM
Rule 84    TERM -> FACTOR / TERM
Rule 85    TYPE -> int
Rule 86    TYPE -> float
Rule 87    TYPE -> char
Rule 88    TYPE -> string
Rule 89    VAR_CTE -> id
Rule 90    VAR_CTE -> cte_float
Rule 91    VAR_CTE -> cte_int
Rule 92    VAR_CTE -> cte_char
Rule 93    VAR_CTE -> cte_string
Rule 94    VAR_CTE -> null
Rule 95    VARS -> TYPE VARS_ID ;
Rule 96    VARS_ID -> id , VARS_ID
Rule 97    VARS_ID -> id

Terminals, with rules where they appear

$                    : 81
(                    : 2 3 5 6 15 19 20 21 22 25 26 40 45 46 49
)                    : 2 3 5 6 15 19 20 21 22 25 26 40 45 46 49
*                    : 83
+                    : 30 41
,                    : 5 6 17 21 21 22 22 25 25 26 27 53 55 96
-                    : 31 42
.                    : 2 3 44
/                    : 84
:                    : 1 45 46
;                    : 4 5 6 15 21 22 25 26 55 56 57 58 59 60 61 95
<                    : 34
=                    : 4
>                    : 35
[                    : 25 55
]                    : 25 55
cbind                : 5
char                 : 87
col                  : 3
correlate            : 22
correlateHeaders     : 21
csv                  : 44
cte_char             : 92
cte_float            : 90
cte_int              : 91
cte_string           : 27 28 44 93
dataframe            : 25 26
else                 : 20
error                : 
float                : 86
func                 : 45 46
id                   : 2 3 4 5 6 15 22 22 25 26 45 46 53 54 55 58 59 60 61 81 81 89 96 97
if                   : 19 20
int                  : 85
main                 : 1
null                 : 94
printCell            : 55
printCol             : 56 57
printData            : 58
printHeaders         : 59
printRow             : 60
printTags            : 61
rbind                : 6
relop_and            : 79
relop_equals         : 38
relop_grequal        : 37
relop_lsequal        : 36
relop_notequal       : 39
relop_or             : 80
return               : 10
row                  : 2
string               : 88
void                 : 45
while                : 49
{                    : 9 10
}                    : 9 10

Nonterminals, with rules where they appear

ACCESS_COL           : 5 57
ACCESS_ROW           : 6 60
ASSIGNMENT           : 72
BINDINGS             : 50
BIND_COLS            : 8
BIND_ROWS            : 7
BLOCK                : 1 19 20 20 45 46 49
BLOCK_INST           : 9 10 11
BLOCK_STM            : 9 10 13
CALLFUNC             : 52 77
CALLFUNC_PARAMS      : 15
CONDITION            : 73
CORR                 : 24
CORRELATION          : 51
CORR_HEADERS         : 23
CREATE_DF            : 47
CREATE_DF_TAGS       : 25
EXP                  : 2 3 4 10 16 17 30 31 32 33 33 55 55
EXPRESSION           : 40 78 79 79 80 80
EXPRESSION_SYM       : 33
FACTOR               : 82 83 84
FILE_INPUT           : 25 26
FUNCTION             : 70
INSTANTIATE          : 11 68
LOOP                 : 76
OPERATION            : 74
PARAMETERS           : 45 46 53
PRINT                : 75
PRINT_CELL           : 66
PRINT_COL            : 62
PRINT_DATA           : 64
PRINT_HEADERS        : 65
PRINT_ROW            : 67
PRINT_TAGS           : 63
PROGRAM              : 0
PROGRAM_FUNCTIONS    : 1 70
PROGRAM_VARS         : 1 68
STATEMENT            : 13
SUPER_EXPRESSION     : 19 20 49
TABLE_HEADER         : 21 21 56
TERM                 : 29 30 31 83 84
TYPE                 : 46 53 54 95
VARS                 : 48
VARS_ID              : 95 96
VAR_CTE              : 21 22 41 42 43

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . PROGRAM_VARS PROGRAM_FUNCTIONS main : BLOCK
    (68) PROGRAM_VARS -> . INSTANTIATE PROGRAM_VARS
    (69) PROGRAM_VARS -> .
    (47) INSTANTIATE -> . CREATE_DF
    (48) INSTANTIATE -> . VARS
    (25) CREATE_DF -> . dataframe ( id , [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (26) CREATE_DF -> . dataframe ( id , FILE_INPUT ) ;
    (95) VARS -> . TYPE VARS_ID ;
    (85) TYPE -> . int
    (86) TYPE -> . float
    (87) TYPE -> . char
    (88) TYPE -> . string

  ! shift/reduce conflict for int resolved as shift
  ! shift/reduce conflict for float resolved as shift
  ! shift/reduce conflict for char resolved as shift
  ! shift/reduce conflict for string resolved as shift
    void            reduce using rule 69 (PROGRAM_VARS -> .)
    main            reduce using rule 69 (PROGRAM_VARS -> .)
    dataframe       shift and go to state 4
    int             shift and go to state 2
    float           shift and go to state 9
    char            shift and go to state 5
    string          shift and go to state 7

  ! int             [ reduce using rule 69 (PROGRAM_VARS -> .) ]
  ! float           [ reduce using rule 69 (PROGRAM_VARS -> .) ]
  ! char            [ reduce using rule 69 (PROGRAM_VARS -> .) ]
  ! string          [ reduce using rule 69 (PROGRAM_VARS -> .) ]

    VARS                           shift and go to state 1
    INSTANTIATE                    shift and go to state 3
    PROGRAM_VARS                   shift and go to state 10
    CREATE_DF                      shift and go to state 8
    PROGRAM                        shift and go to state 6
    TYPE                           shift and go to state 11

state 1

    (48) INSTANTIATE -> VARS .

    dataframe       reduce using rule 48 (INSTANTIATE -> VARS .)
    int             reduce using rule 48 (INSTANTIATE -> VARS .)
    float           reduce using rule 48 (INSTANTIATE -> VARS .)
    char            reduce using rule 48 (INSTANTIATE -> VARS .)
    string          reduce using rule 48 (INSTANTIATE -> VARS .)
    void            reduce using rule 48 (INSTANTIATE -> VARS .)
    main            reduce using rule 48 (INSTANTIATE -> VARS .)
    id              reduce using rule 48 (INSTANTIATE -> VARS .)
    if              reduce using rule 48 (INSTANTIATE -> VARS .)
    while           reduce using rule 48 (INSTANTIATE -> VARS .)
    printCol        reduce using rule 48 (INSTANTIATE -> VARS .)
    printTags       reduce using rule 48 (INSTANTIATE -> VARS .)
    printData       reduce using rule 48 (INSTANTIATE -> VARS .)
    printHeaders    reduce using rule 48 (INSTANTIATE -> VARS .)
    printCell       reduce using rule 48 (INSTANTIATE -> VARS .)
    printRow        reduce using rule 48 (INSTANTIATE -> VARS .)
    rbind           reduce using rule 48 (INSTANTIATE -> VARS .)
    cbind           reduce using rule 48 (INSTANTIATE -> VARS .)
    correlateHeaders reduce using rule 48 (INSTANTIATE -> VARS .)
    correlate       reduce using rule 48 (INSTANTIATE -> VARS .)
    }               reduce using rule 48 (INSTANTIATE -> VARS .)
    return          reduce using rule 48 (INSTANTIATE -> VARS .)


state 2

    (85) TYPE -> int .

    id              reduce using rule 85 (TYPE -> int .)
    func            reduce using rule 85 (TYPE -> int .)


state 3

    (68) PROGRAM_VARS -> INSTANTIATE . PROGRAM_VARS
    (68) PROGRAM_VARS -> . INSTANTIATE PROGRAM_VARS
    (69) PROGRAM_VARS -> .
    (47) INSTANTIATE -> . CREATE_DF
    (48) INSTANTIATE -> . VARS
    (25) CREATE_DF -> . dataframe ( id , [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (26) CREATE_DF -> . dataframe ( id , FILE_INPUT ) ;
    (95) VARS -> . TYPE VARS_ID ;
    (85) TYPE -> . int
    (86) TYPE -> . float
    (87) TYPE -> . char
    (88) TYPE -> . string

  ! shift/reduce conflict for int resolved as shift
  ! shift/reduce conflict for float resolved as shift
  ! shift/reduce conflict for char resolved as shift
  ! shift/reduce conflict for string resolved as shift
    void            reduce using rule 69 (PROGRAM_VARS -> .)
    main            reduce using rule 69 (PROGRAM_VARS -> .)
    dataframe       shift and go to state 4
    int             shift and go to state 2
    float           shift and go to state 9
    char            shift and go to state 5
    string          shift and go to state 7

  ! int             [ reduce using rule 69 (PROGRAM_VARS -> .) ]
  ! float           [ reduce using rule 69 (PROGRAM_VARS -> .) ]
  ! char            [ reduce using rule 69 (PROGRAM_VARS -> .) ]
  ! string          [ reduce using rule 69 (PROGRAM_VARS -> .) ]

    VARS                           shift and go to state 1
    INSTANTIATE                    shift and go to state 3
    PROGRAM_VARS                   shift and go to state 12
    CREATE_DF                      shift and go to state 8
    TYPE                           shift and go to state 11

state 4

    (25) CREATE_DF -> dataframe . ( id , [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (26) CREATE_DF -> dataframe . ( id , FILE_INPUT ) ;

    (               shift and go to state 13


state 5

    (87) TYPE -> char .

    id              reduce using rule 87 (TYPE -> char .)
    func            reduce using rule 87 (TYPE -> char .)


state 6

    (0) S' -> PROGRAM .



state 7

    (88) TYPE -> string .

    id              reduce using rule 88 (TYPE -> string .)
    func            reduce using rule 88 (TYPE -> string .)


state 8

    (47) INSTANTIATE -> CREATE_DF .

    dataframe       reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    int             reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    float           reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    char            reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    string          reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    void            reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    main            reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    id              reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    if              reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    while           reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    printCol        reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    printTags       reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    printData       reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    printHeaders    reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    printCell       reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    printRow        reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    rbind           reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    cbind           reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    correlateHeaders reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    correlate       reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    }               reduce using rule 47 (INSTANTIATE -> CREATE_DF .)
    return          reduce using rule 47 (INSTANTIATE -> CREATE_DF .)


state 9

    (86) TYPE -> float .

    id              reduce using rule 86 (TYPE -> float .)
    func            reduce using rule 86 (TYPE -> float .)


state 10

    (1) PROGRAM -> PROGRAM_VARS . PROGRAM_FUNCTIONS main : BLOCK
    (70) PROGRAM_FUNCTIONS -> . FUNCTION PROGRAM_FUNCTIONS
    (71) PROGRAM_FUNCTIONS -> .
    (45) FUNCTION -> . void func id ( PARAMETERS ) : BLOCK
    (46) FUNCTION -> . TYPE func id ( PARAMETERS ) : BLOCK
    (85) TYPE -> . int
    (86) TYPE -> . float
    (87) TYPE -> . char
    (88) TYPE -> . string

    main            reduce using rule 71 (PROGRAM_FUNCTIONS -> .)
    void            shift and go to state 15
    int             shift and go to state 2
    float           shift and go to state 9
    char            shift and go to state 5
    string          shift and go to state 7

    FUNCTION                       shift and go to state 14
    TYPE                           shift and go to state 16
    PROGRAM_FUNCTIONS              shift and go to state 17

state 11

    (95) VARS -> TYPE . VARS_ID ;
    (96) VARS_ID -> . id , VARS_ID
    (97) VARS_ID -> . id

    id              shift and go to state 19

    VARS_ID                        shift and go to state 18

state 12

    (68) PROGRAM_VARS -> INSTANTIATE PROGRAM_VARS .

    void            reduce using rule 68 (PROGRAM_VARS -> INSTANTIATE PROGRAM_VARS .)
    int             reduce using rule 68 (PROGRAM_VARS -> INSTANTIATE PROGRAM_VARS .)
    float           reduce using rule 68 (PROGRAM_VARS -> INSTANTIATE PROGRAM_VARS .)
    char            reduce using rule 68 (PROGRAM_VARS -> INSTANTIATE PROGRAM_VARS .)
    string          reduce using rule 68 (PROGRAM_VARS -> INSTANTIATE PROGRAM_VARS .)
    main            reduce using rule 68 (PROGRAM_VARS -> INSTANTIATE PROGRAM_VARS .)


state 13

    (25) CREATE_DF -> dataframe ( . id , [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (26) CREATE_DF -> dataframe ( . id , FILE_INPUT ) ;

    id              shift and go to state 20


state 14

    (70) PROGRAM_FUNCTIONS -> FUNCTION . PROGRAM_FUNCTIONS
    (70) PROGRAM_FUNCTIONS -> . FUNCTION PROGRAM_FUNCTIONS
    (71) PROGRAM_FUNCTIONS -> .
    (45) FUNCTION -> . void func id ( PARAMETERS ) : BLOCK
    (46) FUNCTION -> . TYPE func id ( PARAMETERS ) : BLOCK
    (85) TYPE -> . int
    (86) TYPE -> . float
    (87) TYPE -> . char
    (88) TYPE -> . string

    main            reduce using rule 71 (PROGRAM_FUNCTIONS -> .)
    void            shift and go to state 15
    int             shift and go to state 2
    float           shift and go to state 9
    char            shift and go to state 5
    string          shift and go to state 7

    FUNCTION                       shift and go to state 14
    TYPE                           shift and go to state 16
    PROGRAM_FUNCTIONS              shift and go to state 21

state 15

    (45) FUNCTION -> void . func id ( PARAMETERS ) : BLOCK

    func            shift and go to state 22


state 16

    (46) FUNCTION -> TYPE . func id ( PARAMETERS ) : BLOCK

    func            shift and go to state 23


state 17

    (1) PROGRAM -> PROGRAM_VARS PROGRAM_FUNCTIONS . main : BLOCK

    main            shift and go to state 24


state 18

    (95) VARS -> TYPE VARS_ID . ;

    ;               shift and go to state 25


state 19

    (96) VARS_ID -> id . , VARS_ID
    (97) VARS_ID -> id .

    ,               shift and go to state 26
    ;               reduce using rule 97 (VARS_ID -> id .)


state 20

    (25) CREATE_DF -> dataframe ( id . , [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (26) CREATE_DF -> dataframe ( id . , FILE_INPUT ) ;

    ,               shift and go to state 27


state 21

    (70) PROGRAM_FUNCTIONS -> FUNCTION PROGRAM_FUNCTIONS .

    main            reduce using rule 70 (PROGRAM_FUNCTIONS -> FUNCTION PROGRAM_FUNCTIONS .)


state 22

    (45) FUNCTION -> void func . id ( PARAMETERS ) : BLOCK

    id              shift and go to state 28


state 23

    (46) FUNCTION -> TYPE func . id ( PARAMETERS ) : BLOCK

    id              shift and go to state 29


state 24

    (1) PROGRAM -> PROGRAM_VARS PROGRAM_FUNCTIONS main . : BLOCK

    :               shift and go to state 30


state 25

    (95) VARS -> TYPE VARS_ID ; .

    dataframe       reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    int             reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    float           reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    char            reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    string          reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    id              reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    if              reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    while           reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    printCol        reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    printTags       reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    printData       reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    printHeaders    reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    printCell       reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    printRow        reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    rbind           reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    cbind           reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    correlateHeaders reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    correlate       reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    }               reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    return          reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    void            reduce using rule 95 (VARS -> TYPE VARS_ID ; .)
    main            reduce using rule 95 (VARS -> TYPE VARS_ID ; .)


state 26

    (96) VARS_ID -> id , . VARS_ID
    (96) VARS_ID -> . id , VARS_ID
    (97) VARS_ID -> . id

    id              shift and go to state 19

    VARS_ID                        shift and go to state 31

state 27

    (25) CREATE_DF -> dataframe ( id , . [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (26) CREATE_DF -> dataframe ( id , . FILE_INPUT ) ;
    (44) FILE_INPUT -> . cte_string . csv

    [               shift and go to state 34
    cte_string      shift and go to state 32

    FILE_INPUT                     shift and go to state 33

state 28

    (45) FUNCTION -> void func id . ( PARAMETERS ) : BLOCK

    (               shift and go to state 35


state 29

    (46) FUNCTION -> TYPE func id . ( PARAMETERS ) : BLOCK

    (               shift and go to state 36


state 30

    (1) PROGRAM -> PROGRAM_VARS PROGRAM_FUNCTIONS main : . BLOCK
    (9) BLOCK -> . { BLOCK_INST BLOCK_STM }
    (10) BLOCK -> . { BLOCK_INST BLOCK_STM return EXP }

    {               shift and go to state 37

    BLOCK                          shift and go to state 38

state 31

    (96) VARS_ID -> id , VARS_ID .

    ;               reduce using rule 96 (VARS_ID -> id , VARS_ID .)


state 32

    (44) FILE_INPUT -> cte_string . . csv

    .               shift and go to state 39


state 33

    (26) CREATE_DF -> dataframe ( id , FILE_INPUT . ) ;

    )               shift and go to state 40


state 34

    (25) CREATE_DF -> dataframe ( id , [ . CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (27) CREATE_DF_TAGS -> . cte_string ,
    (28) CREATE_DF_TAGS -> . cte_string

    cte_string      shift and go to state 41

    CREATE_DF_TAGS                 shift and go to state 42

state 35

    (45) FUNCTION -> void func id ( . PARAMETERS ) : BLOCK
    (53) PARAMETERS -> . TYPE id , PARAMETERS
    (54) PARAMETERS -> . TYPE id
    (85) TYPE -> . int
    (86) TYPE -> . float
    (87) TYPE -> . char
    (88) TYPE -> . string

    int             shift and go to state 2
    float           shift and go to state 9
    char            shift and go to state 5
    string          shift and go to state 7

    TYPE                           shift and go to state 44
    PARAMETERS                     shift and go to state 43

state 36

    (46) FUNCTION -> TYPE func id ( . PARAMETERS ) : BLOCK
    (53) PARAMETERS -> . TYPE id , PARAMETERS
    (54) PARAMETERS -> . TYPE id
    (85) TYPE -> . int
    (86) TYPE -> . float
    (87) TYPE -> . char
    (88) TYPE -> . string

    int             shift and go to state 2
    float           shift and go to state 9
    char            shift and go to state 5
    string          shift and go to state 7

    TYPE                           shift and go to state 44
    PARAMETERS                     shift and go to state 45

state 37

    (9) BLOCK -> { . BLOCK_INST BLOCK_STM }
    (10) BLOCK -> { . BLOCK_INST BLOCK_STM return EXP }
    (11) BLOCK_INST -> . INSTANTIATE BLOCK_INST
    (12) BLOCK_INST -> .
    (47) INSTANTIATE -> . CREATE_DF
    (48) INSTANTIATE -> . VARS
    (25) CREATE_DF -> . dataframe ( id , [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (26) CREATE_DF -> . dataframe ( id , FILE_INPUT ) ;
    (95) VARS -> . TYPE VARS_ID ;
    (85) TYPE -> . int
    (86) TYPE -> . float
    (87) TYPE -> . char
    (88) TYPE -> . string

    id              reduce using rule 12 (BLOCK_INST -> .)
    if              reduce using rule 12 (BLOCK_INST -> .)
    while           reduce using rule 12 (BLOCK_INST -> .)
    printCol        reduce using rule 12 (BLOCK_INST -> .)
    printTags       reduce using rule 12 (BLOCK_INST -> .)
    printData       reduce using rule 12 (BLOCK_INST -> .)
    printHeaders    reduce using rule 12 (BLOCK_INST -> .)
    printCell       reduce using rule 12 (BLOCK_INST -> .)
    printRow        reduce using rule 12 (BLOCK_INST -> .)
    rbind           reduce using rule 12 (BLOCK_INST -> .)
    cbind           reduce using rule 12 (BLOCK_INST -> .)
    correlateHeaders reduce using rule 12 (BLOCK_INST -> .)
    correlate       reduce using rule 12 (BLOCK_INST -> .)
    }               reduce using rule 12 (BLOCK_INST -> .)
    return          reduce using rule 12 (BLOCK_INST -> .)
    dataframe       shift and go to state 4
    int             shift and go to state 2
    float           shift and go to state 9
    char            shift and go to state 5
    string          shift and go to state 7

    VARS                           shift and go to state 1
    INSTANTIATE                    shift and go to state 46
    BLOCK_INST                     shift and go to state 47
    CREATE_DF                      shift and go to state 8
    TYPE                           shift and go to state 11

state 38

    (1) PROGRAM -> PROGRAM_VARS PROGRAM_FUNCTIONS main : BLOCK .

    $end            reduce using rule 1 (PROGRAM -> PROGRAM_VARS PROGRAM_FUNCTIONS main : BLOCK .)


state 39

    (44) FILE_INPUT -> cte_string . . csv

    csv             shift and go to state 48


state 40

    (26) CREATE_DF -> dataframe ( id , FILE_INPUT ) . ;

    ;               shift and go to state 49


state 41

    (27) CREATE_DF_TAGS -> cte_string . ,
    (28) CREATE_DF_TAGS -> cte_string .

    ,               shift and go to state 50
    ]               reduce using rule 28 (CREATE_DF_TAGS -> cte_string .)


state 42

    (25) CREATE_DF -> dataframe ( id , [ CREATE_DF_TAGS . ] , FILE_INPUT ) ;

    ]               shift and go to state 51


state 43

    (45) FUNCTION -> void func id ( PARAMETERS . ) : BLOCK

    )               shift and go to state 52


state 44

    (53) PARAMETERS -> TYPE . id , PARAMETERS
    (54) PARAMETERS -> TYPE . id

    id              shift and go to state 53


state 45

    (46) FUNCTION -> TYPE func id ( PARAMETERS . ) : BLOCK

    )               shift and go to state 54


state 46

    (11) BLOCK_INST -> INSTANTIATE . BLOCK_INST
    (11) BLOCK_INST -> . INSTANTIATE BLOCK_INST
    (12) BLOCK_INST -> .
    (47) INSTANTIATE -> . CREATE_DF
    (48) INSTANTIATE -> . VARS
    (25) CREATE_DF -> . dataframe ( id , [ CREATE_DF_TAGS ] , FILE_INPUT ) ;
    (26) CREATE_DF -> . dataframe ( id , FILE_INPUT ) ;
    (95) VARS -> . TYPE VARS_ID ;
    (85) TYPE -> . int
    (86) TYPE -> . float
    (87) TYPE -> . char
    (88) TYPE -> . string

    id              reduce using rule 12 (BLOCK_INST -> .)
    if              reduce using rule 12 (BLOCK_INST -> .)
    while           reduce using rule 12 (BLOCK_INST -> .)
    printCol        reduce using rule 12 (BLOCK_INST -> .)
    printTags       reduce using rule 12 (BLOCK_INST -> .)
    printData       reduce using rule 12 (BLOCK_INST -> .)
    printHeaders    reduce using rule 12 (BLOCK_INST -> .)
    printCell       reduce using rule 12 (BLOCK_INST -> .)
    printRow        reduce using rule 12 (BLOCK_INST -> .)
    rbind           reduce using rule 12 (BLOCK_INST -> .)
    cbind           reduce using rule 12 (BLOCK_INST -> .)
    correlateHeaders reduce using rule 12 (BLOCK_INST -> .)
    correlate       reduce using rule 12 (BLOCK_INST -> .)
    }               reduce using rule 12 (BLOCK_INST -> .)
    return          reduce using rule 12 (BLOCK_INST -> .)
    dataframe       shift and go to state 4
    int             shift and go to state 2
    float           shift and go to state 9
    char            shift and go to state 5
    string          shift and go to state 7

    VARS                           shift and go to state 1
    INSTANTIATE                    shift and go to state 46
    BLOCK_INST                     shift and go to state 55
    CREATE_DF                      shift and go to state 8
    TYPE                           shift and go to state 11

state 47

    (9) BLOCK -> { BLOCK_INST . BLOCK_STM }
    (10) BLOCK -> { BLOCK_INST . BLOCK_STM return EXP }
    (13) BLOCK_STM -> . STATEMENT BLOCK_STM
    (14) BLOCK_STM -> .
    (72) STATEMENT -> . ASSIGNMENT
    (73) STATEMENT -> . CONDITION
    (74) STATEMENT -> . OPERATION
    (75) STATEMENT -> . PRINT
    (76) STATEMENT -> . LOOP
    (77) STATEMENT -> . CALLFUNC
    (4) ASSIGNMENT -> . id = EXP ;
    (19) CONDITION -> . if ( SUPER_EXPRESSION ) BLOCK
    (20) CONDITION -> . if ( SUPER_EXPRESSION ) BLOCK else BLOCK
    (50) OPERATION -> . BINDINGS
    (51) OPERATION -> . CORRELATION
    (52) OPERATION -> . CALLFUNC
    (62) PRINT -> . PRINT_COL
    (63) PRINT -> . PRINT_TAGS
    (64) PRINT -> . PRINT_DATA
    (65) PRINT -> . PRINT_HEADERS
    (66) PRINT -> . PRINT_CELL
    (67) PRINT -> . PRINT_ROW
    (49) LOOP -> . while ( SUPER_EXPRESSION ) BLOCK
    (15) CALLFUNC -> . id ( CALLFUNC_PARAMS ) ;
    (7) BINDINGS -> . BIND_ROWS
    (8) BINDINGS -> . BIND_COLS
    (23) CORRELATION -> . CORR_HEADERS
    (24) CORRELATION -> . CORR
    (56) PRINT_COL -> . printCol TABLE_HEADER ;
    (57) PRINT_COL -> . printCol ACCESS_COL ;
    (61) PRINT_TAGS -> . printTags id ;
    (58) PRINT_DATA -> . printData id ;
    (59) PRINT_HEADERS -> . printHeaders id ;
    (55) PRINT_CELL -> . printCell id [ EXP , EXP ] ;
    (60) PRINT_ROW -> . printRow id ACCESS_ROW ;
    (6) BIND_ROWS -> . rbind ( id , ACCESS_ROW ) ;
    (5) BIND_COLS -> . cbind ( id , ACCESS_COL ) ;
    (21) CORR_HEADERS -> . correlateHeaders ( TABLE_HEADER , TABLE_HEADER , VAR_CTE ) ;
    (22) CORR -> . correlate ( id , id , VAR_CTE ) ;

    }               reduce using rule 14 (BLOCK_STM -> .)
    return          reduce using rule 14 (BLOCK_STM -> .)
    id              shift and go to state 63
    if              shift and go to state 64
    while           shift and go to state 84
    printCol        shift and go to state 87
    printTags       shift and go to state 58
    printData       shift and go to state 79
    printHeaders    shift and go to state 83
    printCell       shift and go to state 68
    printRow        shift and go to state 71
    rbind           shift and go to state 73
    cbind           shift and go to state 56
    correlateHeaders shift and go to state 81
    correlate       shift and go to state 78
